--- a/ios/PhotoMap/Info.plist
+++ b/ios/PhotoMap/Info.plist
@@ -41,7 +41,6 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSAppTransportSecurity</key>
-	<!--See http://ste.vn/2015/06/10/configuring-app-transport-security-ios-9-osx-10-11/ -->
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
@@ -52,5 +51,11 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow the app to access your camera.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Please allow the app to access your microphone.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow the app to access your photos.</string>
 </dict>
 </plist>
